--- a/image.html
+++ b/image.html
@@ -35,35 +35,44 @@ window.onload = function(){
 	document.getElementById("files").addEventListener('change', handler, false);
 	document.getElementById("load_button").addEventListener('mousedown', imload, false);
 	document.getElementById("apply_button").addEventListener('mousedown',function(){
+	var laplacian = [2,0,2,
+					0,-8,0,
+					2,0,2];
+	var gaussian = [1,2,1,
+					2,4,2,
+					1,2,1];
 		var none_proc = function(){
 			var cvs = document.querySelector('canvas');
 			var ctx = cvs.getContext('2d');
 			ctx.drawImage(image,0,0,cvs.width,cvs.height);
 		}
-		var laplacian_proc = function(){
+		var applyMatrix = function(arr,k){
+			if(!k) k=1;
 			var cvs = document.querySelector('canvas');
 			var ctx = cvs.getContext('2d');
-			grayscale();
 			var inputData = ctx.getImageData(0, 0, cvs.width, cvs.height).data;
-			
-			var laplacian=[	2,0,2,
-							0,-8,0,
-							2,0,2];
 			
 			var output = ctx.createImageData(cvs.width, cvs.height);
 			var outputData = output.data;
 			
 			for(var i = 1; i < cvs.height - 1; ++i ){
 				for(var j = 1; j < cvs.width - 1; ++j ){
-					var val = 0;
+					var valr = 0;
+					var valg = 0;
+					var valb = 0;
 					for(var dy = -1; dy <= 1; ++dy){
 						for(var dx = -1; dx <= 1; ++dx){
-							val += inputData[ ((i + dy) * cvs.width + (j + dx)) * 4 + 0 ] * laplacian[ ( dy + 1 ) * 3 + dx + 1 ]
+							valr += inputData[ ((i + dy) * cvs.width + (j + dx)) * 4 + 0 ] * arr[ ( dy + 1 ) * 3 + dx + 1 ];
+							valg += inputData[ ((i + dy) * cvs.width + (j + dx)) * 4 + 1 ] * arr[ ( dy + 1 ) * 3 + dx + 1 ];
+							valb += inputData[ ((i + dy) * cvs.width + (j + dx)) * 4 + 2 ] * arr[ ( dy + 1 ) * 3 + dx + 1 ];
 						}
 					}
-					outputData[(i * cvs.width + j) * 4 + 0] = val;
-					outputData[(i * cvs.width + j) * 4 + 1] = val;
-					outputData[(i * cvs.width + j) * 4 + 2] = val;
+					valr = valr/k|0;valr = (valr>0)?valr:-valr;
+					valg = valg/k|0;valg = (valr>0)?valg:-valg;
+					valb = valb/k|0;valb = (valr>0)?valb:-valb;
+					outputData[(i * cvs.width + j) * 4 + 0] = valr;
+					outputData[(i * cvs.width + j) * 4 + 1] = valg;
+					outputData[(i * cvs.width + j) * 4 + 2] = valb;
 					outputData[(i * cvs.width + j) * 4 + 3] = 0xff;
 				}
 			}
@@ -148,7 +157,12 @@ window.onload = function(){
 				dither();
 				break;
 			case 3:
-				laplacian_proc();
+				none_proc();
+				applyMatrix(laplacian);
+				break;
+			case 4:
+				none_proc();
+				applyMatrix(gaussian,16);
 				break;
 		}
 	},false);
@@ -167,6 +181,7 @@ window.onload = function(){
 <option>Grayscale</option>
 <option>Dither</option>
 <option>Laplacian</option>
+<option>Gaussian</option>
 </select>
 <input type="button" value="Apply" id="apply_button">
 </body>
